--- a/.codebuild/buildspec.yml
+++ b/.codebuild/buildspec.yml
@@ -8,7 +8,7 @@ version: 0.1
 #    LOGIN_PASSWORD: /CodeBuild/dockerLoginPassword
 
 phases:
-  checkout:
+  install:
     commands:
       - mpirun --version && gfortran --version && echo $BASEDIR && pwd && ls
     finally:
@@ -26,9 +26,10 @@ phases:
       - mkdir build
       - cd build
       - cmake .. -DBASEDIR=$BASEDIR/Linux -DCMAKE_Fortran_COMPILER=gfortran -DCMAKE_BUILD_TYPE=Debug
-    finally:
       - cd build
       - make -j"$(nproc)" install
+    finally:
+      - echo "Build phase"
   post_build:
     commands:
       - echo Entered the post_build phase...
