--- a/components.yaml
+++ b/components.yaml
@@ -1,6 +1,7 @@
 env:
   local: ./@env
-  remote: ../ESMA_env.git
+  #remote: ../ESMA_env.git
+  remote: GEOS-ESM/ESMA_env.git
   tag: v2.1.6
   develop: main
 
