--- a/Develop.cfg
+++ b/Develop.cfg
@@ -1,7 +1,6 @@
 [ESMA_env]
 required = True
-#repo_url = git@github.com:GEOS-ESM/ESMA_env.git
-repo_url = https://github.com/GEOS-ESM/ESMA_env.git
+repo_url = git@github.com:GEOS-ESM/ESMA_env.git
 local_path = ./@env
 tag = v2.1.6
 protocol = git
