--- a/components.yaml
+++ b/components.yaml
@@ -14,87 +14,101 @@ cmake:
 
 ecbuild:
   local: ./@cmake/@ecbuild
-  remote: ../ecbuild.git
+  #remote: ../ecbuild.git
+  remote: https://github.com/GEOS-ESM/ecbuild.git
   tag: geos/v1.0.5
 
 NCEP_Shared:
   local: ./src/Shared/@NCEP_Shared
-  remote: ../NCEP_Shared.git
+  #remote: ../NCEP_Shared.git
+  remote: https://github.com/GEOS-ESM/NCEP_Shared.git
   tag: v1.0.0
   sparse: ./config/NCEP_Shared.sparse
   develop: main
 
 GMAO_Shared:
   local: ./src/Shared/@GMAO_Shared
-  remote: ../GMAO_Shared.git
+  #remote: ../GMAO_Shared.git
+  remote: https://github.com/GEOS-ESM/GMAO_Shared.git
   tag: v1.1.8
   sparse: ./config/GMAO_Shared.sparse
   develop: main
 
 MAPL:
   local: ./src/Shared/@MAPL
-  remote: ../MAPL.git
+  #remote: ../MAPL.git
+  remote: https://github.com/GEOS-ESM/MAPL.git
   tag: v2.1.6
   develop: develop
 
 FMS:
   local: ./src/Shared/@FMS
-  remote: ../FMS.git
+  #remote: ../FMS.git
+  remote: https://github.com/GEOS-ESM/FMS.git
   tag: geos/2019.01.02+noaff.1
   develop: geos/release/2019.01
 
 GEOSgcm_GridComp:
   local: ./src/Components/@GEOSgcm_GridComp
-  remote: ../GEOSgcm_GridComp.git
+  #remote: ../GEOSgcm_GridComp.git
+  remote: https://github.com/GEOS-ESM/GEOSgcm_GridComp.git
   tag: v1.10.2
   sparse: ./config/GEOSgcm_GridComp.sparse
   develop: develop
 
 FVdycoreCubed_GridComp:
   local: ./src/Components/@GEOSgcm_GridComp/GEOSagcm_GridComp/GEOSsuperdyn_GridComp/@FVdycoreCubed_GridComp
-  remote: ../FVdycoreCubed_GridComp.git
+  #remote: ../FVdycoreCubed_GridComp.git
+  remote: https://github.com/GEOS-ESM/FVdycoreCubed_GridComp.git
   tag: v1.2.3
   develop: develop
 
 fvdycore:
   local: ./src/Components/@GEOSgcm_GridComp/GEOSagcm_GridComp/GEOSsuperdyn_GridComp/@FVdycoreCubed_GridComp/@fvdycore
-  remote: ../GFDL_atmos_cubed_sphere.git
+  #remote: ../GFDL_atmos_cubed_sphere.git
+  remote: https://github.com/GEOS-ESM/GFDL_atmos_cubed_sphere.git
   tag: geos/v1.1.3
   develop: geos/develop
 
 GEOSchem_GridComp:
   local: ./src/Components/@GEOSgcm_GridComp/GEOSagcm_GridComp/GEOSphysics_GridComp/@GEOSchem_GridComp
-  remote: ../GEOSchem_GridComp.git
+  #remote: ../GEOSchem_GridComp.git
+  remote: https://github.com/GEOS-ESM/GEOSchem_GridComp.git
   tag: v1.3.5
   develop: develop
 
 mom:
   local: ./src/Components/@GEOSgcm_GridComp/GEOSogcm_GridComp/GEOSocean_GridComp/GuestOcean_GridComp/MOM_GEOS5PlugMod/@mom
-  remote: ../MOM5.git
+  #remote: ../MOM5.git
+  remote: https://github.com/GEOS-ESM/MOM5.git
   tag: geos/5.1.0+1.1.1
   develop: geos5
 
 mom6:
   local: ./src/Components/@GEOSgcm_GridComp/GEOSogcm_GridComp/GEOSocean_GridComp/GuestOcean_GridComp/MOM6_GEOSPlug/@mom6
-  remote: ../MOM6.git
+  #remote: ../MOM6.git
+  remote: https://github.com/GEOS-ESM/MOM6.git
   tag: geos/v1.0.0
   develop: geos
   recurse_submodules: True
 
 GEOSgcm_App:
   local: ./src/Applications/@GEOSgcm_App
-  remote: ../GEOSgcm_App.git
+  #remote: ../GEOSgcm_App.git
+  remote: https://github.com/GEOS-ESM/GEOSgcm_App.git
   tag: v1.3.7
   develop: develop
 
 UMD_Etc:
   local: ./src/Applications/@UMD_Etc
-  remote: ../UMD_Etc.git
+  #remote: ../UMD_Etc.git
+  remote: https://github.com/GEOS-ESM/UMD_Etc.git
   tag: v1.0.3
   develop: main
 
 CPLFCST_Etc:
   local: ./src/Applications/@CPLFCST_Etc
-  remote: ../CPLFCST_Etc.git
+  #remote: ../CPLFCST_Etc.git
+  remote: https://github.com/GEOS-ESM/CPLFCST_Etc.git
   tag: v1.0.1
   develop: main
